uploaded flask files

--- a/Project Development Phase/Sprint 2/Model Building/CNNModelBuild.ipynb
+++ b/Project Development Phase/Sprint 2/Model Building/CNNModelBuild.ipynb
@@ -124,7 +124,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.8.3 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -138,12 +138,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.3"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a42ccb73e7d9bfdf27e036f1d2b8b681e55fc0743cc5586bc2474d4a60f4b886"
+    "hash": "3f7a561224eefb3177bd60aef517a1575fda0f229c0579b1dccc948af56213ae"
    }
   }
  },
